style.css
/* ... */
.bottom-body .old-price {
    color: rgb(255, 0, 0);
    font-size: 0.9rem;
    margin-left: 1rem;
    text-shadow: 1px 1px 10px #df3f6257;
    text-decoration: line-through;
}

.bottom-body .quotas {
    background-color: #eff7f2;
    color: #136132;
    width: auto;
    padding: 1px 1rem 1px 1rem;
    align-self: flex-start;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
}

.bottom-body .off {
    background-color: #e4efff;
    color: rgb(22, 99, 143);
    margin-top: 5px;
    font-size: 0.8rem;
}

/* personalized  */

.personalized {
    background-color: #f7f7f7;
    margin-top: 6rem;
    padding: 5rem;
    display: flex;
    justify-content: center;
}
.personalized .row {
    justify-content: center;
    align-items: start;
    text-align: center;
}
.personalized .left-panel {
    padding: 50px 50px 50px 50px;
    text-align: start;
}

.personalized .left-panel h2 {
    font-size: 2rem;
    font-weight: bold;
    margin: 1rem 0px;
    color: rgb(136, 44, 44);
}

.personalized .right-panel {
    max-height: 720px;
    max-width: 720px;
}
.personalized img {
    max-width: 460px;
    max-height: 460px;
    width: 100%;
    filter: drop-shadow(1px 1px 30px rgba(0, 0, 255, 0.164));
    -webkit-filter: drop-shadow(1px 1px 30px rgba(0, 0, 255, 0.164));
}

/* contact-and-map */

.contact-and-map {
    background-color: rgba(0, 0, 0, 0.822);
    color: white;
    display: flex;
    justify-content: center;
    margin: 6rem 0px 6rem 0px;
    text-align: center;
}
.contact-and-map .row {
    text-align: center;
}

.contact-and-map .left-panel {
    text-align: start;
    max-width: 600px;
    padding: 2rem 0px 2rem 0px;
}

.contact-and-map .right-panel {
    justify-content: center;
}
.contact-and-map .map-viewer {
    margin: 10px;
    width: 100%;
    height: 400px;
}

.contact-and-map .title {
    font-size: 1.5rem;
    font-weight: bold;
    margin-bottom: 1rem;
}

.contact-and-map .description {
    margin-bottom: 3rem;
}

.contact-and-map .schedules p {
    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
    margin-top: 5px;
    margin-bottom: 5px;
}

.contact-and-map .buttons {
    margin: 2rem 0px 2rem 0px;
}

/* services */

.services {
    padding-bottom: 5rem;
    display: flex;
    justify-content: center;
    align-items: center;
}
.services .row {
    width: 90vw;
    max-width: 1200px;
}
.services .item {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}
.services i {
    font-size: 3rem;
    color: goldenrod;
    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.199));
    -webkit-filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.199));
}
.services p {
    font-family: "Mea Culpa", cursive;
    color: #616060;
}
/* footer */

.footer {
    text-align: center;
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #808080;
    color: white;
    padding-left: 20px;
    padding-bottom: 1rem;
}

.footer .panel {
    margin-top: 3rem;
}
.footer h3 {
    font-weight: bold;
    color: rgba(0, 0, 0, 0.637);
}

footer a {
    color: white;
}

.footer .copyright {
    margin-top: 3rem;
    font-size: 0.8rem;
    color: black;
    filter: drop-shadow(1px 1px 5px white);
    -webkit-filter: drop-shadow(1px 1px 5px white);
}
@media screen and (max-width: 1400px) {
    .nav-container {
        flex-wrap: wrap;
        justify-content: center;
    }
    .navbar-nav {
        display: flex;
        flex-wrap: wrap;
        order: 1;
        width: 100%;
        text-align: center;
    }
    .navbar-form {
        width: 75%;
        justify-self: end;
    }
    .navbar-form input[type="search"] {
        width: 100%;
    }
}

@media screen and (max-width: 992px) {
    .main-products-card {
        text-align: center;
        border: 1px solid rgba(0, 0, 0, 0.027);
    }
    .main-products-card .body-card {
        text-align: start;
    }

    .personalized {
        padding: 50px 0px;
    }

    .personalized .left-panel {
        order: 1;
    }
    .personalized img {
        max-width: 360px;
    }
}

@media screen and (max-width: 575px) {
    .navbar-logo {
        display: none;
    }

    .navbar-form {
        width: 90%;
        justify-self: center;
    }
    .personalized {
        max-width: 94vw;
    }
}

@media screen and (max-width: 480px) {
}

